--- a/account-create.html
+++ b/account-create.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/login_theme.css">
     <link rel="website icon" type="png" href="images\comp-cat.png">
     <script src="javascript/script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
         document.getElementById('signup').addEventListener('input', function () {
             validateForm();
@@ -43,15 +44,46 @@
             errorElement.classList.add('success');
         }
         }
+
+    function checkname(){
+        var name=document.getElementById( "username" ).value;
+        
+        if(name){
+            $.ajax({
+            type: 'post',
+            url: 'php-processes/checkdata.php',
+            data: {
+                username:name,
+            },
+            success: function (response) {
+                $( '#name_status' ).html(response);
+                if(response=="OK")	
+                {
+                    return true;	
+                }
+                else
+                {
+                    return false;	
+                }
+            }
+            });
+        }
+        else{
+            $( '#name_status' ).html("");
+            return false;
+        }
+    }
     </script>
 </head>
 <body>
+    <!-- php-processes/process-signup -->
     <div class="body">
         <div class="login">
             <h1>Create Your Account</h1>
             <div class="fuck-you">
-                <form action="php-processes/process-signup" method="post" id="signup">
+                <form action="" method="post" id="signup">
                     <input required placeholder="Username" autocomplete="new-username" name="username" id="username" type="text" minlength="3" maxlength="30">
+                    <span id="name_status"></span>
                     <br>
                     <input required placeholder="Email" name="email" id="email" type="email">
                     <br>
