--- a/account-create.html
+++ b/account-create.html
@@ -82,7 +82,7 @@
             <h1>Create Your Account</h1>
             <div class="fuck-you">
                 <form action="" method="post" id="signup">
-                    <input required placeholder="Username" autocomplete="new-username" name="username" id="username" type="text" minlength="3" maxlength="30">
+                    <input required placeholder="Username" autocomplete="new-username" name="username" id="username" type="text" minlength="3" maxlength="30" onkeyup="checkname();">
                     <span id="name_status"></span>
                     <br>
                     <input required placeholder="Email" name="email" id="email" type="email">
