--- a/account-create.html
+++ b/account-create.html
@@ -14,36 +14,36 @@
     <script src="javascript/script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
-        document.getElementById('signup').addEventListener('input', function () {
-            validateForm();
-        });
+        // document.getElementById('signup').addEventListener('input', function () {
+        //     validateForm();
+        // });
 
 
-        //checks if password and confirm password match
-        function validateForm() {
-        const username = document.getElementById('username').value;
-        const password = document.getElementById('pwd').value;
-        const confirmPassword = document.getElementById('confirm_pwd').value;
-        const submitBtn = document.getElementById('submit');
-        const errorElement = document.getElementById('passwordError');
+        // //checks if password and confirm password match
+        // function validateForm() {
+        // const username = document.getElementById('username').value;
+        // const password = document.getElementById('pwd').value;
+        // const confirmPassword = document.getElementById('confirm_pwd').value;
+        // const submitBtn = document.getElementById('submit');
+        // const errorElement = document.getElementById('passwordError');
 
-        let isValid = true;
+        // let isValid = true;
 
-        if (!username || !password || !confirmPassword) {
-            isValid = false;
-        }
+        // if (!username || !password || !confirmPassword) {
+        //     isValid = false;
+        // }
 
-        if (password !== confirmPassword) {
-            errorElement.textContent = 'Passwords do not match';
-            errorElement.classList.remove('success');
-            errorElement.classList.add('error');
-            isValid = false;
-        } else {
-            errorElement.textContent = 'Passwords match';
-            errorElement.classList.remove('error');
-            errorElement.classList.add('success');
-        }
-        }
+        // if (password !== confirmPassword) {
+        //     errorElement.textContent = 'Passwords do not match';
+        //     errorElement.classList.remove('success');
+        //     errorElement.classList.add('error');
+        //     isValid = false;
+        // } else {
+        //     errorElement.textContent = 'Passwords match';
+        //     errorElement.classList.remove('error');
+        //     errorElement.classList.add('success');
+        // }
+        // }
 
     function checkname(){
         var name=document.getElementById( "username" ).value;
