--- a/account-create.html
+++ b/account-create.html
@@ -57,7 +57,7 @@
             },
             success: function (response) {
                 $( '#name_status' ).html(response);
-                if(response=="OK")	
+                if(response=="Username Available")	
                 {
                     return true;	
                 }
