--- a/account-create.html
+++ b/account-create.html
@@ -49,7 +49,7 @@
         var username = $('#username').val();
         
         if(username){
-            $.post("php-processes/update-badges", {
+            $.post("php-processes/checkdata", {
             //DATA
             username: username,
         });
