--- a/account-create.html
+++ b/account-create.html
@@ -100,7 +100,7 @@
                     <br>
                     <span id="user-availability-status"></span>
                     <br>
-                    <input required placeholder="Email" name="email" id="email" type="email">
+                    <input required placeholder="Email" name="email" id="email" type="email" onkeyup="checkEmail();">
                     <br>
                     <span id="email-availability-status"></span>
                     <br>
