--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -18,17 +18,26 @@
         <div class="logo">
             <img src="../images/comp-cat-beta.png" alt="cat using computer logo">
         </div>
-        <div class="mobileNav">
+        <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
             <img src="../images/menu.png" alt="mobile navigation icon">
         </div>
-        <div class="navMenu">
+        <div class="navMenu" id="navMenu">
             <div class="navContent">
                 <a href="index.html">Home</a>
-                <a href="projects.html">Projects</a>
+                <div class="projects">
+                    <a href="new-project.html">New Project</a>
+                    <a href="projects.html">Projects</a>
+                </div>
                 <a href="announcements.html">Announcements</a>
                 <a href="about.html">About</a>
             </div>
         </div>
+        <div class="user">
+            <img src="../images/dragon/dragon (0).png" alt="user profile picture">
+        </div>
     </nav>
+    <script>
+        
+    </script>
 </body>
 </html>
