mobile friendly css

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -21,7 +21,7 @@
         <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
             <img src="../images/menu.png" alt="mobile navigation icon">
         </div>
-        <div class="navMenu" id="navMenu">
+        <div class="navMenu slide close" id="navMenu">
             <div class="navContent">
                 <a href="index.html">Home</a>
                 <div class="projects">
@@ -34,18 +34,18 @@
         </div>
         <div class="user" id="user" onclick="userClick()">
             <img src="../images/dragon/dragon (0).png" alt="user profile picture">
-            <div class="userDropdown" id="userDropdown">
-                <div class="userContent">
-                    <a href="#">Profile <img src="../images/user.png" class="dropdown-icon" id="profile-icon" alt="profile icon"></a>
-                    <a href="#">Settings <img src="../images/settings.png" class="dropdown-icon" id="setting-icon" alt="setting icon"></a>
-                    <a href="#">Logout <img src="../images/logout.png" class="dropdown-icon" id="logout-icon" alt="logout icon"></a>
-                </div>
+        </div>
+        <div class="userDropdown" id="userDropdown">
+            <div class="userContent">
+                <a href="#">Profile <img src="../images/user.png" class="dropdown-icon" id="profile-icon" alt="profile icon"></a>
+                <a href="#">Settings <img src="../images/settings.png" class="dropdown-icon" id="setting-icon" alt="setting icon"></a>
+                <a href="#">Logout <img src="../images/logout.png" class="dropdown-icon" id="logout-icon" alt="logout icon"></a>
+            </div>
         </div>
     </nav>
     <script>
         function userClick() {
             document.getElementById('userDropdown').classList.toggle('show');
-            console.log('userClick');
         }
     </script>
 </body>
