personal profile pages with GET superglobal

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -18,10 +18,15 @@
         <div class="logo">
             <img src="../images/comp-cat-beta.png" alt="cat using computer logo">
         </div>
-        <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
-            <img src="../images/menu.png" alt="mobile navigation icon">
+        <div class="nav-bar">
+            <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
+                <img src="../images/menu.png" alt="mobile navigation icon">
+            </div>
+            <div class="user" id="user" onclick="userClick()">
+                <img src="../images/dragon/dragon (0).png" alt="user profile picture">
+            </div>
         </div>
-        <div class="navMenu slide close" id="navMenu">
+        <div class="navMenu slide-right close" id="navMenu">
             <div class="navContent">
                 <a href="index.html">Home</a>
                 <div class="projects">
@@ -32,10 +37,7 @@
                 <a href="about.html">About</a>
             </div>
         </div>
-        <div class="user" id="user" onclick="userClick()">
-            <img src="../images/dragon/dragon (0).png" alt="user profile picture">
-        </div>
-        <div class="userDropdown" id="userDropdown">
+        <div class="userDropdown slide-left" id="userDropdown">
             <div class="userContent">
                 <a href="#">Profile <img src="../images/user.png" class="dropdown-icon" id="profile-icon" alt="profile icon"></a>
                 <a href="#">Settings <img src="../images/settings.png" class="dropdown-icon" id="setting-icon" alt="setting icon"></a>
