--- a/choose-pfp.html
+++ b/choose-pfp.html
@@ -84,7 +84,7 @@
                         var element2 = document.createElement("img");
                         element2.setAttribute("id", id + "-" + index);
                         element2.setAttribute("class", "badge-pfp");
-                        element2.setAttribute("src", domainAndImagePath + id + "/" + id + index + ".svg");
+                        element2.setAttribute("src", domainAndImagePath + id + "/" + id + "-" + index + ".svg");
                         console.log(element2.src);
                         document.getElementById("choose-pfp").value = element2.src;
                         // element2.addEventListener("click", function (event) {
