--- a/choose-pfp.html
+++ b/choose-pfp.html
@@ -75,7 +75,7 @@
                     var element1 = document.createElement("img");
                     element1.setAttribute("id", colorPrefix + i);
                     element1.setAttribute("class", "badge-pfp");
-                    element1.setAttribute("src", domainAndImagePath + id + "/" + id +  i + ".svg");
+                    element1.setAttribute("src", domainAndImagePath + id + "/" + id + "-" + i + ".svg");
                     element1.addEventListener("click", function (event) {
                         while (row3.firstChild) {
                             row3.removeChild(row3.firstChild);
