--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -14,6 +14,7 @@
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
     <script src="https://kit.fontawesome.com/ea9288eda1.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <nav>
