--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="userDropdown slide-left" id="userDropdown">
             <div class="userContent">
-                <a href="#">Profile <i class="fa-regular fa-user" id="profile-icon" alt="profile icon"></i></a>
+                <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
                 <a href="#">Settings <img src="../images/settings.webp" class="dropdown-icon" id="setting-icon" alt="setting icon"></a>
                 <a href="#">Logout <img src="../images/logout.webp" class="dropdown-icon" id="logout-icon" alt="logout icon"></a>
             </div>
