added editing icon below progress bar

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="mf-css/progressBar.css">
     <link rel="website icon" type="webp" href="../images/comp-cat-beta.webp">
     <script src="js/scripts.js"></script>
-    <script src="https://kit.fontawesome.com/ea9288eda1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -48,8 +47,8 @@
         <div class="userDropdown slide-left" id="userDropdown">
             <div class="userContent">
                 <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                <a href="#">Settings <img src="../images/settings.webp" class="dropdown-icon" id="setting-icon" alt="setting icon"></a>
-                <a href="#">Logout <img src="../images/logout.webp" class="dropdown-icon" id="logout-icon" alt="logout icon"></a>
+                <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
             </div>
         </div>
     </nav>
@@ -76,6 +75,9 @@
                     <h2>Goal:</h2>
                     <h3>50,000</h3>
                 </div>
+            </div>
+            <div class="added">
+                <span class="fa fa-gear" id="edit-pb"></span>
             </div>
         </div>
         
