--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -80,8 +80,26 @@
                 <span class="fa fa-gear" id="edit-pb"></span>
             </div>
         </div>
-        
     </div>
+    <!-- <div class="current-project-wrapper"> -->
+        <div class="current-project-container">
+            <div id="area-title">
+                <h1>Your Current Project</h1>
+            </div>
+            <div id="project-img">
+                <img src="../images/genre-covers/placeholder.webp" id="theme-img">
+            </div>
+            <div id="project-title">
+                <h2>Title</h2>
+            </div>
+            <div id="project-summary">
+                <p>Looks like you're not logged in.
+                    <br><br>
+                    Click <a href="#">here</a> to login or sign up!
+                </p>
+            </div>
+        </div>
+    <!-- </div> -->
     <script>
         function userClick() {
             document.getElementById('userDropdown').classList.toggle('show');
