changed pfp to login link

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -30,7 +30,11 @@
                  </div>
             </div>
             <div class="user" id="user" onclick="userClick()">
-                <img src="../images/dragon/dragon-0.webp" alt="user profile picture">
+                <!-- <img src="../images/dragon/dragon-0.webp" alt="user profile picture"> -->
+                    <!-- <span class="fa fa-sign-in" id="sign-in"
+                        style="font-size: 50px; color: var(--accent-3); z-index: 2; cursor: pointer;">
+                    </span> -->
+                <a><h2>Login</h2></a>
             </div>
         </div>
         <div class="navMenu slide-right close" id="navMenu">
