--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -85,25 +85,28 @@
             </div>
         </div>
     </div>
-    <!-- <div class="current-project-wrapper"> -->
-        <div class="current-project-container">
-            <div id="area-title">
-                <h1>Your Current Project</h1>
-            </div>
-            <div id="project-img">
-                <img src="../images/genre-covers/placeholder.webp" id="theme-img">
-            </div>
-            <div id="project-title">
-                <h2>Title</h2>
-            </div>
-            <div id="project-summary">
-                <p>Looks like you're not logged in.
-                    <br><br>
-                    Click <a href="#">here</a> to login or sign up!
-                </p>
-            </div>
+    <div class="current-project-container">
+        <div id="area-title">
+            <h1>Your Current Project</h1>
         </div>
-    <!-- </div> -->
+        <div id="project-img">
+            <img src="../images/genre-covers/placeholder.webp" id="theme-img">
+        </div>
+        <div id="project-title">
+            <h2>Title</h2>
+        </div>
+        <div id="project-summary">
+            <p>Looks like you're not logged in.
+                <br><br>
+                Click <a href="#">here</a> to login or sign up!
+            </p>
+        </div>
+    </div>
+    <div class="badge-container">
+        <img src="../images/badges/start-first-project-mono.webp" class="badge pulse">
+        <img src="../images/badges/first-daily-mono.webp" class="badge pulse">
+        <img src="../images/badges/quarter-quomplete-mono.webp" class="badge pulse">
+    </div>
     <script>
         function userClick() {
             document.getElementById('userDropdown').classList.toggle('show');
