--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -106,6 +106,7 @@
         <img src="../images/badges/start-first-project-mono.webp" class="badge pulse">
         <img src="../images/badges/first-daily-mono.webp" class="badge pulse">
         <img src="../images/badges/quarter-quomplete-mono.webp" class="badge pulse">
+        <img src="../images/badges/half-way-mono.webp" class="badge pulse">
     </div>
     <script>
         function userClick() {
