finish badge area

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -103,10 +103,21 @@
         </div>
     </div>
     <div class="badge-container">
-        <img src="../images/badges/start-first-project-mono.webp" class="badge pulse">
-        <img src="../images/badges/first-daily-mono.webp" class="badge pulse">
-        <img src="../images/badges/quarter-quomplete-mono.webp" class="badge pulse">
-        <img src="../images/badges/half-way-mono.webp" class="badge pulse">
+        <h1 id="badge-title">Badges</h1>
+        <img src="../images/badges/start-1st-project-mono.webp" id="start-1st-project" class="badge pulse">
+        <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
+        <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
+        <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
+        <img src="../images/badges/all-downhill-mono.webp" id="all-downhill" class="badge pulse">
+        <img src="../images/badges/cross-finish-mono.webp" id="cross-finish" class="badge pulse"> 
+        <img src="../images/badges/on-track-mono.webp" id="on-track" class="badge pulse">
+        <img src="../images/badges/out-gate-mono.webp" id="out-gate" class="badge pulse">
+        <img src="../images/badges/streak-two-mono.webp" id="streak-two" class="badge pulse">
+        <img src="../images/badges/streak-three-mono.webp" id="streak-three" class="badge pulse">
+        <img src="../images/badges/streak-seven-mono.webp" id="streak-seven" class="badge pulse">
+        <img src="../images/badges/streak-fourteen-mono.webp" id="streak-fourteen" class="badge pulse">
+        <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
+        <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
     </div>
     <script>
         function userClick() {
