--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -119,6 +119,11 @@
         <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
         <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
     </div>
+    <footer id="footer">
+        <p id="copyright">&copy;2025. All rights reserved.</p>
+        <p id="contact"><a href="contact.php">Contact Us</a></p>
+        <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
+    </footer>
     <script>
         function userClick() {
             document.getElementById('userDropdown').classList.toggle('show');
