--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -65,19 +65,19 @@
             <div class="progress-info-wrapper">
                 <div id="current" class="progress-info">
                     <h2>Current:</h2>
-                    <h3>10,000</h3>
+                    <p>10,000</p>
                 </div>
                 <div id="daysLeft" class="progress-info">
                     <h2>Days Left:</h2>
-                    <h3>Some</h3>
+                    <p>Some</p>
                 </div>
                 <div id="dailyGoal" class="progress-info">
                     <h2>Daily Goal:</h2>
-                    <h3>100</h3>
+                    <p>100</p>
                 </div>
                 <div id="goal" class="progress-info">
                     <h2>Goal:</h2>
-                    <h3>50,000</h3>
+                    <p>50,000</p>
                 </div>
             </div>
             <div class="added">
