--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -85,21 +85,23 @@
             </div>
         </div>
     </div>
-    <div class="current-project-container">
-        <div id="area-title">
-            <h1>Your Current Project</h1>
-        </div>
-        <div id="project-img">
-            <img src="../images/genre-covers/placeholder.webp" id="theme-img">
-        </div>
-        <div id="project-title">
-            <h2>Title</h2>
-        </div>
-        <div id="project-summary">
-            <p>Looks like you're not logged in.
-                <br><br>
-                Click <a href="#">here</a> to login or sign up!
-            </p>
+    <div class="current-project-wrapper">
+        <div class="current-project-container">
+            <div id="area-title">
+                <h1>Your Current Project</h1>
+            </div>
+            <div id="project-img">
+                <img src="../images/genre-covers/placeholder.webp" id="theme-img">
+            </div>
+            <div id="project-title">
+                <h2>Title</h2>
+            </div>
+            <div id="project-summary">
+                <p>Looks like you're not logged in.
+                    <br><br>
+                    Click <a href="#">here</a> to login or sign up!
+                </p>
+            </div>
         </div>
     </div>
     <div class="badge-container">
