--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -85,41 +85,43 @@
             </div>
         </div>
     </div>
-    <div class="current-project-wrapper">
-        <div class="current-project-container">
-            <div id="area-title">
-                <h1>Your Current Project</h1>
-            </div>
-            <div id="project-img">
-                <img src="../images/genre-covers/placeholder.webp" id="theme-img">
-            </div>
-            <div id="project-title">
-                <h2>Title</h2>
-            </div>
-            <div id="project-summary">
-                <p>Looks like you're not logged in.
-                    <br><br>
-                    Click <a href="#">here</a> to login or sign up!
-                </p>
+    <div class="main-wrapper">
+        <div class="current-project-wrapper">
+            <div class="current-project-container">
+                <div id="area-title">
+                    <h1>Your Current Project</h1>
+                </div>
+                <div id="project-img">
+                    <img src="../images/genre-covers/placeholder.webp" id="theme-img">
+                </div>
+                <div id="project-title">
+                    <h2>Title</h2>
+                </div>
+                <div id="project-summary">
+                    <p>Looks like you're not logged in.
+                        <br><br>
+                        Click <a href="#">here</a> to login or sign up!
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="badge-container">
-        <h1 id="badge-title">Badges</h1>
-        <img src="../images/badges/start-1st-project-mono.webp" id="start-1st-project" class="badge pulse">
-        <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
-        <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
-        <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
-        <img src="../images/badges/all-downhill-mono.webp" id="all-downhill" class="badge pulse">
-        <img src="../images/badges/cross-finish-mono.webp" id="cross-finish" class="badge pulse"> 
-        <img src="../images/badges/on-track-mono.webp" id="on-track" class="badge pulse">
-        <img src="../images/badges/out-gate-mono.webp" id="out-gate" class="badge pulse">
-        <img src="../images/badges/streak-two-mono.webp" id="streak-two" class="badge pulse">
-        <img src="../images/badges/streak-three-mono.webp" id="streak-three" class="badge pulse">
-        <img src="../images/badges/streak-seven-mono.webp" id="streak-seven" class="badge pulse">
-        <img src="../images/badges/streak-fourteen-mono.webp" id="streak-fourteen" class="badge pulse">
-        <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
-        <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
+        <div class="badge-container">
+            <h1 id="badge-title">Badges</h1>
+            <img src="../images/badges/start-1st-project-mono.webp" id="start-1st-project" class="badge pulse">
+            <img src="../images/badges/first-daily-mono.webp" id="first-daily" class="badge pulse">
+            <img src="../images/badges/quarter-quomplete-mono.webp" id="quarter-quomplete" class="badge pulse">
+            <img src="../images/badges/half-way-mono.webp" id="half-way" class="badge pulse">
+            <img src="../images/badges/all-downhill-mono.webp" id="all-downhill" class="badge pulse">
+            <img src="../images/badges/cross-finish-mono.webp" id="cross-finish" class="badge pulse"> 
+            <img src="../images/badges/on-track-mono.webp" id="on-track" class="badge pulse">
+            <img src="../images/badges/out-gate-mono.webp" id="out-gate" class="badge pulse">
+            <img src="../images/badges/streak-two-mono.webp" id="streak-two" class="badge pulse">
+            <img src="../images/badges/streak-three-mono.webp" id="streak-three" class="badge pulse">
+            <img src="../images/badges/streak-seven-mono.webp" id="streak-seven" class="badge pulse">
+            <img src="../images/badges/streak-fourteen-mono.webp" id="streak-fourteen" class="badge pulse">
+            <img src="../images/badges/streak-twentyOne-mono.webp" id="streak-twentyOne" class="badge pulse">
+            <img src="../images/badges/every-streak-mono.webp" id="every-streak" class="badge pulse">
+        </div>
     </div>
     <footer id="footer">
         <p id="copyright">&copy;2025. All rights reserved.</p>
