--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -16,18 +16,33 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav>
+    <header>
         <div class="logo">
-            <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
+                <img src="../images/comp-cat-beta.webp" alt="cat using computer logo">
         </div>
-        <div class="nav-bar">
-            <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
-                <!-- <img src="../images/menu.webp" alt="mobile navigation icon"> -->
-                 <div class="menu-icon-wrapper">
-                    <div id="menu-bar-1" class="menu-bar"></div>
-                    <div id="menu-bar-2" class="menu-bar"></div>
-                    <div id="menu-bar-3" class="menu-bar"></div>
-                 </div>
+        <nav>
+            <div class="nav-bar">
+                <div class="navContent">
+                    <a href="index.html">Home</a>
+                    <a href="announcements.html">Announcements</a>
+                    <a href="about.html">About</a>
+                    <a href="login.html" class="active">Login</a>
+                </div>
+                <div class="mobileNav" id="mobileNav" onclick="navMenuClick()">
+                    <!-- <img src="../images/menu.webp" alt="mobile navigation icon"> -->
+                    <div class="menu-icon-wrapper">
+                        <div id="menu-bar-1" class="menu-bar"></div>
+                        <div id="menu-bar-2" class="menu-bar"></div>
+                        <div id="menu-bar-3" class="menu-bar"></div>
+                    </div>
+                </div>
+                <div class="user" id="user" onclick="userClick()">
+                    <!-- <img src="../images/dragon/dragon-0.webp" alt="user profile picture"> -->
+                        <!-- <span class="fa fa-sign-in" id="sign-in"
+                            style="font-size: 50px; color: var(--accent-3); z-index: 2; cursor: pointer;">
+                        </span> -->
+                    <a><h2>Login</h2></a>
+                </div>
             </div>
             <div class="navMenu slide-right close" id="navMenu">
                 <div class="navContent">
@@ -40,22 +55,15 @@
                     <a href="about.html">About</a>
                 </div>
             </div>
-            <div class="user" id="user" onclick="userClick()">
-                <!-- <img src="../images/dragon/dragon-0.webp" alt="user profile picture"> -->
-                    <!-- <span class="fa fa-sign-in" id="sign-in"
-                        style="font-size: 50px; color: var(--accent-3); z-index: 2; cursor: pointer;">
-                    </span> -->
-                <a><h2>Login</h2></a>
+            <div class="userDropdown slide-left" id="userDropdown">
+                <div class="userContent">
+                    <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
+                    <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
+                    <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
+                </div>
             </div>
-        </div>
-        <div class="userDropdown slide-left" id="userDropdown">
-            <div class="userContent">
-                <a href="#">Profile <i class="fa fa-user" id="profile-icon" alt="profile icon"></i></a>
-                <a href="#">Settings <i class="fa fa-gear" id="setting-icon" alt="setting icon"></i></a>
-                <a href="#">Logout <i class="fa fa-sign-out" id="logout-icon" alt="logout icon"></i></a>
-            </div>
-        </div>
-    </nav>
+        </nav>
+    </header>
     <div class="pb-wrapper">
         <div class="pb-background">
             <h1>Project Progress</h1>
