fixing layout overlapping issues

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -22,7 +22,7 @@
         </div>
         <nav>
             <div class="nav-bar">
-                <div class="navContent">
+                <div class="desktop-navContent">
                     <a href="index.html">Home</a>
                     <a href="announcements.html">Announcements</a>
                     <a href="about.html">About</a>
