--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -64,6 +64,16 @@
             </div>
         </nav>
     </header>
+    <div class="container">
+        <div class="not-logged-in" id="not-logged-in">
+            <p>Psst, hey you. 
+            <br>
+            If you already have an account just click the Login link above. 
+            <br>    
+            If you're new, click <a href="account-create.html">here</a> to sign up and 
+                start earning badges!</p>
+        </div>
+    </div>
     <div class="pb-wrapper">
         <div class="pb-background">
             <h1>Project Progress</h1>
