added login href to index page

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -118,7 +118,7 @@
                 <div id="project-summary">
                     <p>Looks like you're not logged in.
                         <br><br>
-                        Click <a href="#">here</a> to login or sign up!
+                        Click <a href="login.html">here</a> to login or sign up!
                     </p>
                 </div>
             </div>
