--- a/mobile-friendly/login.html
+++ b/mobile-friendly/login.html
@@ -19,10 +19,10 @@
         <div class="login-container">
             <h1 id="login-title">Welcome to the<br>Elsewhere Writers Guild</h1>
             <form method="post">
-                <label for="username">Username</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Password</label>
-                <input type="password" id="password" name="password" required>
+                <label for="username">Username:</label>
+                <input class="input" type="text" id="username" name="username" required>
+                <label for="password">Password:</label>
+                <input class="input" type="password" id="password" name="password" required>
                 <div class="checkbox-wrapper">
                     <input type="checkbox" class="checkbox" onclick="showPassword()">
                     <label for="checkbox">Show Password</label>
