--- a/mobile-friendly/login.html
+++ b/mobile-friendly/login.html
@@ -17,7 +17,10 @@
 <body>
     <div class="login-wrapper">
         <div class="login-container">
-            <h1 id="login-title">Welcome to the<br>Elsewhere Writers Guild</h1>
+            <div id="login-title">
+                <h1>Welcome to the</h1>
+                <h1 class="website-title">Elsewhere Writers Guild</h1>
+            </div>
             <form method="post">
                 <label for="username">Username:</label>
                 <input class="input" type="text" id="username" name="username" required>
