fix hot dog and start announcement page

--- a/mobile-friendly/index.html
+++ b/mobile-friendly/index.html
@@ -41,7 +41,7 @@
                         <!-- <span class="fa fa-sign-in" id="sign-in"
                             style="font-size: 50px; color: var(--accent-3); z-index: 2; cursor: pointer;">
                         </span> -->
-                    <a><h2>Login</h2></a>
+                    <a href="login.html"><h2>Login</h2></a>
                 </div>
             </div>
             <div class="navMenu slide-right close" id="navMenu">
