--- a/mobile-friendly/announcements.html
+++ b/mobile-friendly/announcements.html
@@ -80,9 +80,9 @@
                     <p>Happy writing! - The Elsewhere Writers Guild Staff</p>
                 </div>
             </div>
-            <div class="announce-contents spin hide">
+            <div class="announce-contents hide">
                 <h1>No Announcements Yet</h1>
-                <img src="../images/pngs/hot-dog.png">
+                <img src="../images/pngs/hot-dog.png" class="spin">
             </div>
         </div>
     </div>
