--- a/mobile-friendly/about.html
+++ b/mobile-friendly/about.html
@@ -68,9 +68,9 @@
             <p>Whether you're new to writing or you've written a thousand stories, you're always welcome in the guild.</p>
             <p>Here we share our progress, encourage and uplift each other, or just take solace in the fact that we're not suffering the process of writing alone.</p>
             <p>We weird. We write. We unite to fight the plots in our heads and torment our characters.</p>
-        <div class="elmo">
+        <!-- <div class="elmo">
             <img src="../images/gifs/burn-elmo.gif">
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
