--- a/mobile-friendly/about.html
+++ b/mobile-friendly/about.html
@@ -72,5 +72,10 @@
             <img src="../images/gifs/burn-elmo.gif">
         </div> -->
     </div>
+    <footer id="footer">
+        <p id="copyright">&copy;2025. All rights reserved.</p>
+        <p id="logo-link">Logo by <a href="https://kohacu.com/20181205post-22321/">Kohaku!</a></p>
+        <p id="contact"><a href="contact.php">Contact Us</a></p>
+    </footer>
 </body>
 </html>
