--- a/mobile-friendly/about.html
+++ b/mobile-friendly/about.html
@@ -65,10 +65,12 @@
     </header>
     <div class="about-wrapper">
         <h1>Welcome to the Elsewhere Writers Guild</h1>
+        <div class="about-content">
             <p>Whether you're new to writing or you've written a thousand stories, you're always welcome in the guild.</p>
             <p>Here we share our progress, encourage and uplift each other, or just take solace in the fact that we're not suffering the process of writing alone.</p>
             <p>We weird. We write. We unite to fight the plots in our heads and torment our characters.</p>
-        <!-- <div class="elmo">
+        </div>
+            <!-- <div class="elmo">
             <img src="../images/gifs/burn-elmo.gif">
         </div> -->
     </div>
